deploy/svc.yml
apiVersion: v1
kind: Service
metadata:
    name: bw-service
spec:
    selector:
        app: bw
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
