deploy/ingressgateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bw-gateway
  labels:
    app: bw-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: bw-cert
    hosts:
      - "bitwarden.matthew-cloud.com"
