deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bw-ingress
  annotations:
    cert-manager.io/cluster-issuer: cf-dns
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: mc-service
            port:
              number: 80
  tls:
    - hosts:
      - pass.matthew-cloud.com
      secretName: bitwarden-cert
